# a-sketchy.site

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
.github/workflows/: main.yml
backend/: __init__.py
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte  Test.svelte  main.js
sphinx/source/: conf.py  demo.rst  index.rst
sphinx/theme/: page.html  theme.conf
templates/: base.html  index.html  math.html  post.html  svelte.html
templates/errors/: 404.html
